--- a/templates/grafico_prioridades.html
+++ b/templates/grafico_prioridades.html
@@ -48,7 +48,7 @@
         responsive: true,
         title: {
               display: true,
-              text: 'Proporção entre opção alocada dos alunos',
+              text: 'Proporção entre opção alocada dos estudantes',
               position: "top",
         },
         legend: {
