--- a/administracao/templates/administracao/selecionar_orientadores.html
+++ b/administracao/templates/administracao/selecionar_orientadores.html
@@ -11,6 +11,59 @@
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
+  <script src="{% static 'js/w3.js' %}"></script>
+
+  <style>
+    #tab_aloc {
+      border-collapse: collapse;
+      border: 2px solid black;
+    }
+
+    #tab_aloc td, #tab_aloc th {
+      text-align: center;
+      border: 1px solid black;
+      padding: 2px 7px 2px 7px;
+      background-color: #ffffff;
+    }
+
+    #tab_aloc th {
+      background-color: #dddddd;
+      cursor:pointer;
+    }
+
+    .projeto_sel {
+      border: 1px solid #ccc;
+      padding: 12px;
+      margin-bottom: 5px;
+      rouding: 5px;
+      border-radius: 5px;
+      background: #FFFFFF;
+    }
+
+    #lista_orientadores {
+      z-index: 10;
+      position: fixed;  
+      right: 18px;  
+      top: 80px;
+      max-width: 28em;
+    }
+
+    #lista_projetos {
+      display: block;
+      width: calc(100% - 29em);
+    }
+
+    @media (max-width: 1200px) {
+      #lista_orientadores {
+        position: static;  
+        max-width: 100%;
+      }
+      #lista_projetos {
+        width: 100%;
+      }
+    }
+
+  </style>
 
 {% endblock %}
 
@@ -19,7 +72,7 @@
   <span class="titulo">Selecionar Orientadores</span>
 
   {% if mensagem %}
-    <h5 class="red-bold">{{mensagem|safe|linebreaks}}</h5>
+    <span class="red-bold">{{mensagem|safe|linebreaks}}</span>
     <br>
   {% endif %}
 
@@ -33,9 +86,12 @@
   </select>
   {% endcomment %}
 
+  {% comment %} class="container-fluid" {% endcomment %}
+  <div id="lista_projetos">
   {% if projetos %}
 
-    {% for projeto in projetos %}   
+    {% for projeto in projetos %}
+    <div class="projeto_sel">
       <a href="{% url 'projeto_completo' projeto.id %}"> 
         {{projeto.titulo}}
       </a>
@@ -69,7 +125,7 @@
       
       <br>
       <small>
-      <ol>
+      <ol style="margin-bottom: 6px;">
         {% for alocacao in projeto.alocacao_set.all %}
           <li><a href="{% url 'estudante_detail' alocacao.aluno.id %}"
               data-toggle="tooltip" data-html="true" animation="true" title="">
@@ -82,19 +138,27 @@
         {% endfor %}  
       </ol>
       </small>
-      <hr>
+    </div>
     {% endfor %}
 
   {% else %}
-    <p>Não existem propostas de projetos disponíveis.</p>
+    <p>Não existem projetos fechados nesse semestre.</p><br>
   {% endif %}
 
-  <form action="" method="post"> {% csrf_token %}  
-    <input type="button" onclick="location.href='{% url 'projetos_fechados' %}'"  value="Listar Projetos Fechados">
-  </form>
-
+  <br>
+  <b>Total de projetos:</b> {{projetos|length}}
   <br><br>
-  <span id="lista_orientadores"></span>
+    </div>
+
+  <div>
+    <span id="lista_orientadores"></span>
+  </div>
+
+  <br>
+  <h5>Links:</h5>
+  <ul>
+   <li><a href="{% url 'projetos_fechados' %}"> Visualizar Projetos Fechados</a></li>
+  </ul>
 
   <script>
 
@@ -106,7 +170,7 @@
 
     var lista_orientadores = {};
 
-    var orientadores = $('.orientador');
+    var orientadores = $(".orientador");
     for (var i = 0; i < orientadores.length; i++) {
       if($(orientadores[i]).val()) {
         var orientador = $(orientadores[i]).find('option:selected').text();
@@ -115,27 +179,37 @@
         } else {
           lista_orientadores[orientador] = 1;
         }
-
       }
-      
     }
 
     // Check se há alocações realizadas
     if(Object.keys(lista_orientadores).length !== 0) {
-      var tabela = "Alocações de Orientadores<br>"
+      var tabela = "<h4>Alocações de Orientadores</h4>"
 
       // Cria uma tabela
-      tabela += "<table>"
+      tabela += "<table id='tab_aloc'><thead><tr><th>Orientador</th><th>Qtd. de projetos</th></tr></thead><tbody>"
       
-      for (var orientador in lista_orientadores){
-        tabela += "<tr><td>" + orientador + "</td><td>" + lista_orientadores[orientador] + "</td></tr>";
+      // Ordena a lista de orientadores
+      var keys = Object.keys(lista_orientadores);
+      keys.sort();
+      for (var i=0; i<keys.length; i++) {
+        tabela += "<tr class='item'><td>" + keys[i] + "</td><td>" + lista_orientadores[keys[i]] + "</td></tr>";
       }
-      tabela += "</table>"
+      tabela += "</tbody></table>"
 
       // Define valor da tabela
       $("#lista_orientadores").html(tabela);
-    }
 
+      // Ordena a tabela clicando no cabeçalho
+      $("#tab_aloc th:nth-child(1)").click(function() {
+        w3.sortHTML('#tab_aloc', '.item', 'td:nth-child(1)');
+      });
+      $("#tab_aloc th:nth-child(2)").click(function() {
+        w3.sortHTML('#tab_aloc', '.item', 'td:nth-child(2)');
+      });
+
+    }
+    
   }
 
   atualizar_count_orientadores();
