--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -272,7 +272,6 @@
     {% endfor %}
   </small><br>
 
-
   <hr>
   <form action="" method="post"> {% csrf_token %}
     <input type="submit" class="btn btn-secondary" name="limpar"
@@ -532,27 +531,61 @@
       return "SALVAR ESTADO!";
     }
     
+    // Função para somar valores de um objeto
+    const sumValues = obj => Object.values(obj).reduce((a, b) => a + b, 0);
+
     function atualizar_count_propostas() {
 
-      var balanceadas = 0;
-      var desbalanceadas = 0;
+      var balanceadas = {};
+      var desbalanceadas = {};
       var vazias = 0;
 
       var propostas = $('.proposta');
       for (var i = 0; i < propostas.length; i++) {
         qtd_estudantes = $(propostas[i]).children('div').length - 1
         if(qtd_estudantes == 0) {
-            vazias += 1;
+          vazias += 1;
         } else if(qtd_estudantes > 4 || qtd_estudantes < 3) {
-            desbalanceadas += 1;
+          if(desbalanceadas[qtd_estudantes] == undefined) {
+            desbalanceadas[qtd_estudantes] = 1;
+          } else {
+            desbalanceadas[qtd_estudantes] += 1;
+          }
         } else {
-            balanceadas += 1;
+          if(balanceadas[qtd_estudantes] == undefined) {
+            balanceadas[qtd_estudantes] = 1;
+          } else {
+            balanceadas[qtd_estudantes] += 1;
+          }
         }
       }
 
-      $("#desbalanceadas").html(desbalanceadas);
-      $("#balanceadas").html(balanceadas);
-      $("#vazias").html(vazias);
+      // Atualiza os valores de desbalanceadas
+      val = sumValues(desbalanceadas);
+      $("#desbalanceadas").html("<b>" + val + "</b>");
+      if (val > 0) {
+        $("#desbalanceadas").append(" [ ");
+        Object.keys(desbalanceadas).sort().forEach(function(key, i) {
+          if (i != 0) {$("#desbalanceadas").append(" | ");}
+          $("#desbalanceadas").append(desbalanceadas[key] + "x : " + key + " estudante" + (key > 1 ? "s" : ""));
+        });
+        $("#desbalanceadas").append(" ]");
+      }
+
+      // Atualiza os valores de balanceadas
+      val = sumValues(balanceadas);
+      $("#balanceadas").html("<b>" + val + "</b>");
+      if (val > 0) {
+        $("#balanceadas").append(" [ ");
+        Object.keys(balanceadas).sort().forEach(function(key, i) {
+          if (i != 0) {$("#balanceadas").append(" | ");}
+          $("#balanceadas").append(balanceadas[key] + "x : " + key + " estudante" + (key > 1 ? "s" : ""));
+        });
+        $("#balanceadas").append(" ]");
+      }
+
+      // Atualiza os valores de balanceadas
+      $("#vazias").html("<b>" + vazias + "</b>");
 
     }
 
