--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -435,6 +435,6 @@
   {% endif %}
 
   {% include "documento-modal.html" %}
-  {% include "annotation-modal2.html" %}
+  {% include "annotation-modal2.html" %}{% comment %} NÃO SEI SE AINDA EM USO {% endcomment %}
 
 {% endblock %}
