--- a/propostas/templates/propostas/index_propostas.html
+++ b/propostas/templates/propostas/index_propostas.html
@@ -15,7 +15,7 @@
         <a href="{% url 'publicar_propostas' %}"><li>Publicar Propostas</li></a>
         <a href="{% url 'procura_propostas' %}"><li>Procura pelas Propostas</li></a>
         <a href="{% url 'mapeamento_estudantes_propostas' %}"><li>Mapeamento Estudantes e Propostas</li></a>
-        <a href="{% url 'montar_grupos' %}"><li>Montar Grupos para Projetos</li></a>
+        <a href="{% url 'montar_grupos' %}"><li>Planejamento de Grupos por Proposta</li></a>
         <a href="{% url 'selecionar_orientadores' %}"><li>Selecionar Orientadores</li></a>
     </ul>
 {% endblock %}
