formatando data de avisos.

--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -75,7 +75,9 @@
     <h5>Área do Operacional</h5>
     <ul>
       <a href="{% url 'tabela_seguros' %}"><li>Seguros Emitidos</li></a>
+      <a href="{% url 'contratos_assinados' %}"><li>Contratos Assinados</li></a>
     </ul>
-  {% endif %}
+
+    {% endif %}
 
 {% endblock %}
