maior segurança para preencher campos de organização

--- a/propostas/templates/propostas/organizacao_view.html
+++ b/propostas/templates/propostas/organizacao_view.html
@@ -32,7 +32,7 @@
     <input type="submit" style="display:none;"/>
   </div>
   <div class="modal-footer">
-    <small><a href="{% url 'cadastrar_organizacao' proposta.id %}">Cadastrar Nova Organizacao</a></small>
+    <small><a href="{% url 'cadastrar_organizacao' proposta.id %}">Cadastrar Nova Organização</a></small>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
     <button id="atualiza" type="button" class="btn btn-primary" data-dismiss="modal">Atualizar</button>
