--- a/administracao/templates/administracao/cadastra_organizacao.html
+++ b/administracao/templates/administracao/cadastra_organizacao.html
@@ -7,6 +7,7 @@
 
 {% block head %}
   {% load static %}
+  {% load get_field %}
 
   <style>
     textarea {
@@ -39,26 +40,26 @@
   <br>
 
   <form method="post" id="organizacaoform" enctype="multipart/form-data"> {% csrf_token %}
-  
+    
     <label for="organizacao">Nome da Organização:<br></label><br>
-    <textarea id="nome" name="nome" rows="1" cols="80" maxlength="{{nome_length}}" required>{% if organizacao.nome %}{{organizacao.nome|slice:nome_length}}{% elif proposta.nome_organizacao %}{{proposta.nome_organizacao|slice:nome_length}}{% endif %}</textarea>
+    <textarea id="nome" name="nome" rows="1" cols="80" maxlength="{% max_length organizacao "nome" %}" required>{% if organizacao.nome %}{% slice_max_length organizacao "nome" %}{% elif proposta.nome_organizacao %}{% slice_other_max_length proposta.nome_organizacao organizacao "nome" %}{% endif %}</textarea>
     <br><br>
 
-    <label for="sigla">Sigla:</label> <input type="text" size="48" maxlength="{{sigla_length}}" id="sigla" name="sigla" value="{% if organizacao.sigla %}{{organizacao.sigla|slice:sigla_length}}{% elif proposta.nome_organizacao %}{{proposta.nome_organizacao|slice:sigla_length|upper}}{% endif %}" required><br><br>
+    <label for="sigla">Sigla:</label> <input type="text" size="48" maxlength="{% max_length organizacao "sigla" %}" id="sigla" name="sigla" value="{% if organizacao.sigla %}{% slice_max_length organizacao "sigla" %}{% elif proposta.nome_organizacao %}{% slice_other_max_length_upper proposta.nome_organizacao organizacao "sigla" %}{% endif %}" required><br><br>
 
     <label for="endereco">Endereço:<br></label><br>
-    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="{{endereco_length}}">{% if organizacao.endereco %}{{organizacao.endereco|slice:endereco_length}}{% elif proposta.endereco %}{{proposta.endereco|slice:endereco_length}}{% endif %}</textarea>
+    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="{% max_length organizacao "endereco" %}">{% if organizacao.endereco %}{% slice_max_length organizacao "endereco" %}{% elif proposta.endereco %}{% slice_other_max_length proposta.endereco organizacao "endereco" %}{% endif %}</textarea>
     <br><br>
 
-    <label for="website">website:</label><input type="text" size="73" maxlength="{{website_length}}" id="website" name="website" value="{% if organizacao.website %}{{organizacao.website|slice:website_length}}{% elif proposta.website %}{{proposta.website|slice:website_length}}{% endif %}" placeholder="https://www.insper.edu.br"><br><br>
+    <label for="website">website:</label><input type="text" size="73" maxlength="{% max_length organizacao "website" %}" id="website" name="website" value="{% if organizacao.website %}{% slice_max_length organizacao "website" %}{% elif proposta.website %}{% slice_other_max_length proposta.website organizacao "website" %}{% endif %}" placeholder="https://www.insper.edu.br"><br><br>
 
     <label for="informacoes">Informações sobre a organização:</label><br>
-    <textarea id="informacoes" name="informacoes" rows="4" cols="80" maxlength="{{informacoes_length}}">{% if organizacao.informacoes %}{{organizacao.informacoes|slice:informacoes_length}}{% elif proposta.descricao_organizacao %}{{proposta.descricao_organizacao|slice:informacoes_length}}{% endif %}</textarea>
+    <textarea id="informacoes" name="informacoes" rows="4" cols="80" maxlength="{% max_length organizacao "informacoes" %}">{% if organizacao.informacoes %}{% slice_max_length organizacao "informacoes" %}{% elif proposta.descricao_organizacao %}{% slice_other_max_length proposta.descricao_organizacao organizacao "informacoes" %}{% endif %}</textarea>
     <br><br>
 
     <label for="logo">Logotipo da organização:</label>
     <input id="logo" type="file" name="logo" accept="image/*">
-    {% if organizacao %}
+    {% if organizacao and organizacao.logotipo %}
       <br><a href="http://{{request.get_host}}{{organizacao.logotipo.url}}">
         <span class="full-text">http://{{request.get_host}}{{organizacao.logotipo.url}}</span>
       </a>
