--- a/administracao/templates/administracao/cadastra_disciplina.html
+++ b/administracao/templates/administracao/cadastra_disciplina.html
@@ -7,6 +7,7 @@
 
 {% block head %}
   {% load static %}
+  {% load get_field %}
   <style>
     textarea {
       max-width:100%;
@@ -20,9 +21,9 @@
   <br>
 
   <form method="post" id="disciplinaform" enctype="multipart/form-data"> {% csrf_token %}
-  
-
-    <label for="nome">Nome da Disciplina:</label> <input type="text" size="48" style="max-width:100%;display:block" maxlength="{{disciplina_length|add:-2}}" id="nome" name="nome" required>
+    
+    <label for="nome">Nome da Disciplina:</label> <input type="text" size="48" style="max-width:100%;display:block"
+           maxlength="{% max_length disciplina "nome" %}" id="nome" name="nome" required>
     <br><br>
     <input type="submit" value="Cadastrar Disciplina">
     
