--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-
+  {% load get_field %}
   {% load nospaces %}
   {% load date_extras %}
 
@@ -505,7 +505,7 @@
                       <div class="form-group row">
                           <label for="event-location" class="col-sm-4 control-label">Local</label>
                           <div class="col-sm-8">
-                              <input id="event-location" name="event-location" type="text" class="form-control" maxlength="{{loc_length}}">
+                              <input id="event-location" name="event-location" type="text" class="form-control" maxlength="{% max_length Evento "location" %}">
                           </div>
                       </div>
                       <div class="form-group row">
@@ -518,7 +518,7 @@
                       <div class="form-group row">
                           <label for="event-observation" class="col-sm-4 control-label">Obs:</label>
                           <div class="col-sm-8">
-                              <input id="event-observation" name="event-observation" type="text" class="form-control" maxlength="{{obs_length}}">
+                              <input id="event-observation" name="event-observation" type="text" class="form-control" maxlength="{% max_length Evento "observacao" %}">
                           </div>
                       </div>
                       <div class="form-group row">
